[package]
name = "maxsecu-media-transcode-worker"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu author-side ingest/transcode worker: symphonia-demuxes ffmpeg's AV1+AAC output mp4 and re-muxes it into the canonical chunk-aligned self-contained-MP4-per-fragment CMAF layout. Pure-Rust, no C link, no codec decode (the confined ffmpeg.exe spawn lives in client-app)."

[lib]
name = "maxsecu_media_transcode_worker"
path = "src/lib.rs"

# The transcode worker: a secret-less, network-less process that reads a framed
# `TranscodeRequest` on stdin (its `source` is ffmpeg's output AV1/AAC mp4 bytes)
# and writes a framed `TranscodeResult` (canonical CMAF + fragment index) on stdout
# — one job per process, the same one-shot, confined shape as the decode
# `media-worker`. Spawned by `media-launcher::TranscodeLauncher`.
[[bin]]
name = "media-transcode-worker"
path = "src/main.rs"

[dependencies]
# The transcode TYPES + the framed, bounds-safe wire codec
# (`TranscodeRequest`/`TranscodeResult`/`FragmentEntry`,
# `encode/decode_transcode_*`). C-free; this is the TCB-owned contract the launcher
# and this worker agree on byte-for-byte.
maxsecu-client-core = { path = "../client-core" }

# `symphonia` — pure-Rust ISO-BMFF demuxer. The worker DEMUXES ffmpeg's output mp4
# (the attacker-derived `source`) into ordered AV1 video samples + AAC audio samples,
# then hand-re-muxes them into the canonical per-fragment layout. It only DEMUXES
# here (`isomp4`); no audio/video decode happens in the worker, so no codec RCE
# surface is linked. asm OFF keeps it zero-C. The `aac` *decoder* is pulled in by the
# integration tests (dev-dependency below) ONLY to prove the re-muxed audio track is
# viewer-decodable; cargo unifies the features for the test build.
symphonia = { version = "0.6.0", default-features = false, features = [
    "isomp4",
] }

# ---- DEV-ONLY verification deps ----
# These prove the re-muxed output is genuinely canonical and viewer-readable. They are
# the VIEW-path crates; being dev-deps they never enter the worker's shipped graph
# (the NORMAL dep set is just client-core + symphonia/isomp4).
[dev-dependencies]
# `maxsecu-media-worker` — the REAL viewer decode session. The integration test feeds
# every produced fragment to the unmodified `VideoSession` (Open -> Fragment* ->
# Close) and asserts it decodes validated I420 — i.e. the re-mux is byte-compatible
# with the existing, tested view path. It does NOT depend on this worker (no cycle).
maxsecu-media-worker = { path = "../media-worker" }
# `maxsecu-media-launcher` — the CODEC-FREE confined spawner. DEV-ONLY: the Windows
# containment test drives the real `TranscodeLauncher` (AppContainer + Job Object) for
# the confined functional + differential-containment proofs. Pure leaf dev-edge, no
# cycle.
maxsecu-media-launcher = { path = "../media-launcher" }
# `symphonia` with the `aac` decoder — the integration test demuxes the produced
# canonical fragment and AAC-decodes its audio track to PCM, proving the verbatim
# ffmpeg `mp4a`/`esds` SampleEntry the worker copies is viewer-readable. cargo unifies
# this with the `isomp4` feature above for the test build only.
symphonia = { version = "0.6.0", default-features = false, features = [
    "isomp4",
    "aac",
] }

[features]
# No optional features. The worker is a single, always-pure-Rust path: symphonia
# demux + a hand-rolled chunk-aligned CMAF re-mux. The arbitrary-format decode + AV1
# encode are done UPSTREAM by the confined `ffmpeg.exe` spawned in client-app; this
# worker never links or runs a codec.
default = []

[lints.rust]
# `unsafe` is DENIED crate-wide. The whole worker is pure-Rust (symphonia demux + a
# hand-rolled byte muxer) with no FFI, so there is no `unsafe` at all.
unsafe_code = "deny"
