[package]
name = "maxsecu-media-worker"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu sandboxed media-decode worker + launcher (DESIGN §8.1/D30, media-sandbox)."

[lib]
name = "maxsecu_media_worker"
path = "src/lib.rs"

# The decode worker: a secret-less, network-less process that reads canonical
# media bytes on stdin and writes a decoded frame on stdout (media-sandbox §1).
[[bin]]
name = "media-worker"
path = "src/main.rs"

[dependencies]
# The one decoder + the SandboxedDecoder seam/types live in client-core; the
# worker runs the SAME decode, just in an isolated process.
maxsecu-client-core = { path = "../client-core" }

# Win32 OS-confinement (AppContainer + Job Object) for the decode launcher
# (6b-ii). Windows-only; FFI bindings to the OS (not a vendored C library), so
# the no-C posture holds. unsafe is confined to the audited `win32` module.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Isolation",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[lints.rust]
# `unsafe` is DENIED crate-wide and re-allowed ONLY in the contained, audited
# `win32` module (the Win32 AppContainer/Job-Object FFI launcher). Everything
# else — proto, the worker bin, the subprocess launcher — stays unsafe-free.
unsafe_code = "deny"
