[package]
name = "maxsecu-media-worker"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu sandboxed media-decode worker + launcher (DESIGN §8.1/D30, media-sandbox)."

[lib]
name = "maxsecu_media_worker"
path = "src/lib.rs"

# The decode worker: a secret-less, network-less process that reads canonical
# media bytes on stdin and writes a decoded frame on stdout (media-sandbox §1).
[[bin]]
name = "media-worker"
path = "src/main.rs"

[dependencies]
# The one decoder + the SandboxedDecoder seam/types live in client-core; the
# worker runs the SAME decode, just in an isolated process.
maxsecu-client-core = { path = "../client-core" }

# ---- Phase 7 sandboxed-video codec set (Gate-1 ratified, asm OFF = zero-C) ----
# These are the persistent-session video path's runtime decoders (adopted here in
# Gate 3.1; wired into `src/session.rs` in 3.2). In 3.1 they are referenced only
# from the test-support fixture/assertion, but they are declared as normal deps
# (not dev-deps) because they become real `session` runtime deps next task.
#
# `rav1d` — memory-safe Rust port of dav1d (THE #1 AV1-decode RCE surface). The
# `asm` feature (needs nasm, pulls C/assembly) is OFF; only the pure-Rust
# `bitdepth_8`/`bitdepth_16` paths are built.
rav1d = { version = "1.1.0", default-features = false, features = [
    "bitdepth_8",
    "bitdepth_16",
] }
# `symphonia` — pure-Rust CMAF/ISO-BMFF demux (`isomp4`) + AAC-LC decode (`aac`).
# No `default-features` (no MP3/other parsers); zero-C.
symphonia = { version = "0.6.0", default-features = false, features = [
    "isomp4",
    "aac",
] }

# Win32 OS-confinement (AppContainer + Job Object) for the decode launcher
# (6b-ii). Windows-only; FFI bindings to the OS (not a vendored C library), so
# the no-C posture holds. unsafe is confined to the audited `win32` module.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Isolation",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
    "Win32_System_JobObjects",
    "Win32_System_Pipes",
] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# `rav1e` — pure-Rust AV1 *encoder*. FIXTURE-ONLY in this crate (synthesizes
# known-good AV1 bitstreams for the test-support canonical-clip generator); NOT in
# the production view path (real encode rides the C-confined ingest worker). asm
# OFF (no nasm) keeps it zero-C.
rav1e = { version = "0.8.1", default-features = false }

[lints.rust]
# `unsafe` is DENIED crate-wide and re-allowed ONLY in the contained, audited
# `win32` module (the Win32 AppContainer/Job-Object FFI launcher). Everything
# else — proto, the worker bin, the subprocess launcher — stays unsafe-free.
unsafe_code = "deny"
