[package]
name = "maxsecu-media-worker"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu sandboxed media-decode worker + in-process AV1/CMAF decoder (DESIGN §8.1/D30, media-sandbox)."

[lib]
name = "maxsecu_media_worker"
path = "src/lib.rs"

# The decode worker: a secret-less, network-less process that reads canonical
# media bytes on stdin and writes a decoded frame on stdout (media-sandbox §1).
[[bin]]
name = "media-worker"
path = "src/main.rs"

[dependencies]
# The one decoder + the SandboxedDecoder seam/types live in client-core; the
# worker runs the SAME decode, just in an isolated process.
maxsecu-client-core = { path = "../client-core" }

# The codec-free launcher (spawn / framing / proto + the Win32 AppContainer/Job
# confinement). Re-exported from `lib.rs` so the worker bin and the integration
# tests keep their `maxsecu_media_worker::{...}` paths. The codecs below live ONLY
# in this crate — the launcher crate links none of them, so a key-holding consumer
# (`client-app`) depending on the launcher can never unify them in.
maxsecu-media-launcher = { path = "../media-launcher" }

# ---- Phase 7 sandboxed-video codec set (Gate-1 ratified, asm OFF = zero-C) ----
# The persistent-session video path's runtime decoders, linked by `src/session.rs`
# (`VideoSession`). Confined to THIS crate (the decoder + the worker bin); the
# launcher crate is codec-free by construction.
#
# `rav1d` — memory-safe Rust port of dav1d (THE #1 AV1-decode RCE surface). The
# `asm` feature (needs nasm, pulls C/assembly) is OFF; only the pure-Rust
# `bitdepth_8`/`bitdepth_16` paths are built.
rav1d = { version = "1.1.0", default-features = false, features = [
    "bitdepth_8",
    "bitdepth_16",
] }
# `symphonia` — pure-Rust CMAF/ISO-BMFF demux (`isomp4`) + AAC-LC decode (`aac`).
# No `default-features` (no MP3/other parsers); zero-C.
symphonia = { version = "0.6.0", default-features = false, features = [
    "isomp4",
    "aac",
] }

[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
# `rav1e` — pure-Rust AV1 *encoder*. FIXTURE-ONLY in this crate (synthesizes
# known-good AV1 bitstreams for the test-support canonical-clip generator); NOT in
# the production view path (real encode rides the C-confined ingest worker). asm
# OFF (no nasm) keeps it zero-C.
rav1e = { version = "0.8.1", default-features = false }

[lints.rust]
# `unsafe` is DENIED crate-wide and re-allowed ONLY in the contained, audited
# rav1d-C-ABI helpers of `src/session.rs` (the `#[allow(unsafe_code)]` FFI sites).
# Everything else — the worker bin, the re-exported launcher — stays unsafe-free.
# (The Win32 AppContainer/Job-Object FFI now lives in the `media-launcher` crate.)
unsafe_code = "deny"
