[package]
name = "maxsecu-portable-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Portable launcher for the MaxSecu server: lays out a portable folder, generates a DEV self-signed pinned cert + bootstrap secret + DEV D5 key, and serves the secret-free server over TLS. Prod parity behind a DATABASE_URL/profile flag."

[[bin]]
name = "maxsecu-portable-server"
path = "src/main.rs"

[dependencies]
maxsecu-server = { path = "../server" }
maxsecu-admin-core = { path = "../admin-core" }
maxsecu-crypto = { path = "../crypto" }
# Copy-pasteable URL-safe-base64 DEV bootstrap secret. Same 0.22.x already
# resolved in-tree (sink-server), so cargo-deny sees no new external version.
base64 = "0.22"
# Workspace-pinned (Cargo.toml [workspace.dependencies]); tokio extends the
# feature-less workspace pin with the runtime features the launcher needs.
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "net"] }
tokio-rustls = { workspace = true }
# Names the `axum::Router` type returned by `maxsecu_server::router` and stored in
# `Prepared`. Same 0.8 already resolved in-tree (the server's HTTP plane), so
# cargo-deny sees no new external version.
axum = "0.8"
rcgen = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
# HTTP client plane for the Phase-6 boot smoke test (the same hyper/http stack the
# client-app e2es use). tokio/tokio-rustls/base64/serde_json/maxsecu-server/
# maxsecu-crypto are already normal deps (cargo unions their features), so only the
# hyper trio is new here.
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"

[lints.rust]
unsafe_code = "forbid"
