[package]
name = "maxsecu-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu secret-free app server (DESIGN §4.1, Phase 1: auth core)."

[dependencies]
maxsecu-encoding = { path = "../encoding" }
maxsecu-crypto = { path = "../crypto" }
async-trait = "0.1" # async Store trait (sqlx is async)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
axum = "0.8" # HTTP control plane (api.md §2)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22" # the `_b64` wire fields (api.md §1.3)
# DB (sqlx/Postgres) and TLS (tokio-rustls, supplying the per-connection
# exporter) adapters are layered on next.

[dev-dependencies]
tower = { version = "0.5", features = ["util"] } # oneshot for in-process handler tests
http-body-util = "0.1"

[lints.rust]
unsafe_code = "forbid"
