[package]
name = "maxsecu-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu secret-free app server (DESIGN §4.1, Phase 1: auth core)."

[dependencies]
maxsecu-encoding = { path = "../encoding" }
maxsecu-crypto = { path = "../crypto" }
async-trait = "0.1" # async Store trait (sqlx is async)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "net"] }
axum = "0.8" # HTTP control plane (api.md §2)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22" # the `_b64` wire fields (api.md §1.3)
# TLS transport: tokio-rustls supplies the per-connection RFC 5705 exporter
# (channel binding, §9.2). TLS 1.3 only (stack §2) ⇒ no `tls12`. Provider =
# `aws-lc-rs` (the fastest rustls backend on the bulk-AEAD path, used when the
# server proxies ciphertext blobs, D31). TLS is the transport, NOT the file
# confidentiality boundary (the server is zero-knowledge), so this C/asm backend
# sits *beside* the RustCrypto+dalek app-layer TCB, not inside it (deny.toml).
# hyper-util serves the axum router over each TLS stream with a per-connection
# `TlsExporter` Extension.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
# `client` (alongside `server`): the HttpSinkPublisher async-POSTs each appended
# control record to the external sink over the sink's pinned TLS channel (P6.5).
# Same crate/version as the server transport — no second HTTP/TLS stack.
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "service"] }
http-body-util = "0.1" # build/drain the sink publish request/response bodies
# DB adapter: PgStore (the production Store) over the Phase-1 tables. Runtime
# query API only (no compile-time `query!` macros) so the crate builds with no
# DATABASE_URL / no DB. `time` for the u64-ms ↔ TIMESTAMPTZ mapping. No sqlx TLS
# feature — the server↔Postgres link is loopback/private (secret-free server).
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "time"] }
time = "0.3"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] } # oneshot for in-process handler tests
# Loopback TLS integration test (tests/tls_channel_binding.rs): a real rustls
# client + self-signed cert exercises the live exporter end-to-end.
# aws_lc_rs backend (not rcgen's default `ring`) so the graph stays ring-free.
rcgen = { version = "0.13", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
hyper = { version = "1", features = ["client"] }
tokio = { version = "1", features = ["io-util"] }
# Phase-2 end-to-end test (tests/directory_e2e.rs): the offline ceremony side
# (admin-core) produces signed bindings/tombstones; the client side (client-core)
# verifies what the server serves over real TLS. Both test-only.
maxsecu-admin-core = { path = "../admin-core" }
# `net` for the real HttpSinkClient + confirm_anchored in the P6.5 publish e2e
# (tests/sink_publish_e2e.rs); sink-server stands up an in-proc independent sink.
maxsecu-client-core = { path = "../client-core", features = ["net"] }
maxsecu-sink-server = { path = "../sink-server" }
# Phase-4b media e2e (tests/file_e2e.rs): build a source image to drive the real
# RustImageCodec transcode. Pure-Rust png/jpeg (no C), test-only.
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[lints.rust]
unsafe_code = "forbid"
