[package]
name = "maxsecu-sink-server"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish.workspace = true
description = "MaxSecu external sink service core (DESIGN.md §7.6/§16.5, docs/sink-interface.md, Phase 6 P6.3)."

# The in-repo realization of the Phase-5 abstract sink seam: an append-only,
# hash-chained control-log store that recomputes the head EXACTLY as clients do,
# plus an anchorer that emits both anchor-proof forms (custodian co-signature +
# RFC 6962 transparency-log inclusion) the client verifier accepts. P6.4 wraps
# this core in an axum HTTP control-log API served over tokio-rustls — the SAME
# TLS stack (aws-lc-rs provider) as the app server, so NO second TLS stack is
# pulled into the graph (deny.toml bans ring/openssl).
[lib]

[dependencies]
maxsecu-encoding = { path = "../encoding" }
maxsecu-crypto = { path = "../crypto" }
# HTTP control-log surface (docs/sink-interface.md §3) — versions/features mirror
# the app server (crates/server/Cargo.toml) so the workspace resolves ONE copy of
# each and no second TLS stack slips in.
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "net"] }
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22" # the `_b64` wire fields
# TLS transport: tokio-rustls with the aws_lc_rs provider (TLS 1.3 only), exactly
# as the app server. hyper-util serves the axum router over each TLS stream.
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["server-auto", "tokio", "service"] }

[dev-dependencies]
# e2e (tests/sink_e2e.rs): the client-core `net` feature gives the real
# HttpSinkClient; admin-core builds genuine signed records; rcgen mints the
# pinned self-signed loopback cert (aws_lc_rs backend, not ring).
maxsecu-client-core = { path = "../client-core", features = ["net"] }
maxsecu-admin-core = { path = "../admin-core" }
tower = { version = "0.5", features = ["util"] } # oneshot for in-process handler tests
rcgen = { version = "0.13", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }
http-body-util = "0.1" # collect response bodies in the loopback e2e client

[lints.rust]
unsafe_code = "forbid"
