[package]
name = "maxsecu-live-smoke"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Headless functional oracle: drives client-core/client-app against a LIVE installed MaxSecu server over the pinned transport. Exits non-zero on any failure."
# Sits outside the client-workspace root dir (crates/client-app), so name the
# owning workspace explicitly (Cargo's ancestor walk would otherwise bind it to
# the top-level server workspace — same reason client-e2e does this).
workspace = "../../crates/client-app"

[[bin]]
name = "maxsecu-live-smoke"
path = "src/main.rs"

[dependencies]
# default-features = false drops embed-ffmpeg (no vendored ffmpeg.exe needed) but
# KEEPS the real embedded recovery pin (NO unpinned-dev), so build_upload's recovery
# gate matches the live server's recovery account. Build ONLY as `-p maxsecu-live-smoke`
# (never a bare workspace build) so client-e2e's dev-only `unpinned-dev` never unifies in.
maxsecu-client-app = { path = "../../crates/client-app", default-features = false }
maxsecu-client-core = { path = "../../crates/client-core", features = ["net"] }
maxsecu-crypto = { path = "../../crates/crypto" }
maxsecu-encoding = { path = "../../crates/encoding" }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
base64 = "0.22"
serde_json = "1"

[lints.rust]
unsafe_code = "forbid"
