[package]
name = "maxsecu-setup"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
publish = false
description = "Operator one-shot: generate the system recovery account (private key → sealed cold file, public key → embedded pin + server), and mint the first registration key (first enrollee = admin). Run once against a freshly-started server."
# Member of the CLIENT workspace (it depends on client-app, which carries arti and
# therefore cannot resolve alongside the server's sqlx). It sits outside that
# workspace's root dir, so it names its workspace explicitly (mirrors demo-seed).
workspace = "../../crates/client-app"

[[bin]]
name = "maxsecu-setup"
path = "src/main.rs"

[lib]
name = "maxsecu_setup"
path = "src/lib.rs"

[dependencies]
# `default-features = false` turns OFF client-app's default `embed-ffmpeg` (whose
# `include_bytes!(vendor/ffmpeg/ffmpeg.exe)` needs the gitignored vendored binary —
# unused here). `unpinned-dev` embeds the NON-SECURE, clearly-labelled compile-time
# TEST recovery pin so client-app BUILDS without a real `recovery_pin.bin`: since T7
# the client-app build fails closed without a pin, and this tool RUNS BEFORE any real
# pin exists (it is what CREATES the pin). maxsecu-setup never reads client-app's
# EMBEDDED pin — it only uses transport/keystore/recovery_pin::canonical_pin — so the
# test pin baked into this operator binary is inert. The real pin this tool writes
# (`recovery_pin.bin`) is what the operator then rebuilds the SHIPPED client with.
maxsecu-client-app = { path = "../../crates/client-app", default-features = false, features = ["unpinned-dev"] }
maxsecu-client-core = { path = "../../crates/client-core", features = ["net"] }
maxsecu-crypto = { path = "../../crates/crypto" }
maxsecu-encoding = { path = "../../crates/encoding" }
# Concrete versions (the client workspace root defines no [workspace.dependencies];
# these match the versions used across the client workspace / demo-seed).
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["aws_lc_rs"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
base64 = "0.22"
serde_json = "1"
zeroize = "1"

[dev-dependencies]
# The e2e stands up a REAL in-process server over loopback TLS (mirrors
# server/tests/recovery_login_e2e.rs). `default-features = false` → no postgres →
# no sqlx → no libsqlite3-sys 0.30, so the server coexists with arti-client's 0.37
# in this (client) workspace lock. The e2e only ever uses MemoryStore.
maxsecu-server = { path = "../../crates/server", default-features = false }
rcgen = { version = "0.13", default-features = false, features = ["crypto", "aws_lc_rs", "pem"] }

[lints.rust]
unsafe_code = "forbid"
